--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
 			}
 		}
 		//Load the original un-interpolated data
-		d3.csv("./GCI_CompleteData4.csv", function(error, data1){
+		d3.csv("./GCI_CompleteData.csv", function(error, data1){
 			// handle any data loading errors
 			if(error){
 				console.log("Something went wrong");
